--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="dark:bg-dark-background dark:text-white">
+  <body
+    data-sveltekit-preload-data="hover"
+    class="dark:bg-dark-background dark:text-white"
+  >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
