Worked on course side nav and rendering the video for each subsection

--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
   </head>
   <body
     data-sveltekit-preload-data="hover"
-    class="dark:bg-dark-background dark:text-white"
+    class="dark:bg-dark-blue-900 dark:text-white"
   >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
